# raidix_core

./: .gitignore  CMakeLists.txt  raidix_core.kdev4  raidix_core.xmi
include/: Config  Daemon  IPC  Object
lib/: config.h  daemon.cpp  daemon.h  daemon2.cpp  ipc.cpp  ipc.h  lun.cpp  lun.h  object.h  raid.cpp  raid.h
src/: CMakeLists.txt
src/rdcmd/: config.cpp  config.h  ipc.h  main.cpp  rdcmd.cpp  rdcmd.h
src/rdscan/: main.cpp
